Systems/GUI/Widgets/ModeSwitcher/Web/GUIModeSwitcher.css
.Switcher.GUIContentSwitcher.GUIModeSwitcher {
    margin-top: 5px;
    font-family: Verdana;
    font-size: 11px;
}

.GUIContentSwitcher.GUIModeSwitcher .SwitcherList {
    height: 25px;
    margin-right: -3px;
    text-shadow: 0px -1px 1px #000;
    border-color: #222 #222 #3A3A3A;
    *border-left-color: #999; /* IE 7 Target */
    *border-right-color: #999; /* IE 7 Target */
    background-color: #282828;
}

.GUIContentSwitcher.GUIModeSwitcher .SwitcherList {
    z-index: 9
    position: relative;
    overflow: hidden;
    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(15%, #2C2C2C), color-stop(50%, #000));
    background-image: -moz-linear-gradient(top, #2C2C2C 15%, #000 50%);
    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#2C2C2C, endColorstr=#000);
    -moz-border-radius-topright: 0;
    -moz-border-radius-bottomright: 0;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
    -webkit-box-shadow: rgba(0,0,0,1) 0px 0px 3px inset;
    -moz-box-shadow: rgba(0,0,0,1) 0px 0px 3px inset;
    -moz-border-radius-topleft: 14px;
    -moz-border-radius-bottomleft: 14px;
    border-top-left-radius: 14px;
    border-bottom-left-radius: 14px;
}

.GUIModeSwitcher-expander {
    width: 25px;
    height: 25px;
    text-shadow: 0px -1px 1px #000;
    border-width: 1px;
    border-style: solid solid solid none;
    border-color: #222 #222 #3A3A3A;
    background-color: #282828;
    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(15%, #2C2C2C), color-stop(50%, #000));
    background-image: -moz-linear-gradient(top, #2C2C2C 15%, #000 50%);
    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#2C2C2C, endColorstr=#000);
    -webkit-box-shadow: rgba(0,0,0,1) 0px 0px 3px inset;
    -moz-box-shadow: rgba(0,0,0,1) 0px 0px 3px inset;
    -moz-border-radius-topright: 14px;
    -moz-border-radius-bottomright: 14px;
    border-top-right-radius: 14px;
    border-bottom-right-radius: 14px;
}

.GUIModeSwitcher-expander span {
    display: block;
    height: 25px;
    background: transparent url(arrow_right.png) 50% 50% no-repeat;
}

.GUIModeSwitcher-expander:hover {
    cursor: pointer;
    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(15%, #3d3d3d), color-stop(50%, #111));
    background-image: -moz-linear-gradient(top, #3d3d3d 15%, #111 50%);
    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#3d3d3d, endColorstr=#111);
    -webkit-box-shadow: rgba(0,0,0,0.4) 0px 1px 2px inset;
    -moz-box-shadow: rgba(0,0,0,0.4) 0px 1px 2px inset;
}

.GUIContentSwitcher.GUIModeSwitcher li a {
    line-height: 25px;
    color: #FFF;
    border-left: 1px solid #000;
    padding: 0 1.5em;
}

.GUIContentSwitcher.GUIModeSwitcher li a:hover {
    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(15%, #3d3d3d), color-stop(50%, #111));
    background-image: -moz-linear-gradient(top, #3d3d3d 15%, #111 50%);
    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#3d3d3d, endColorstr=#111);
    -webkit-box-shadow: rgba(0,0,0,0.4) 0px 1px 2px inset;
    -moz-box-shadow: rgba(0,0,0,0.4) 0px 1px 2px inset;
    color: #FFF;
}

.GUIContentSwitcher.GUIModeSwitcher li.selected a {
    text-shadow: 0px -1px 1px #14243d;
    background-color: #07376a;
    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(15%, #2b65b6), color-stop(50%, #032347));
    background-image: -moz-linear-gradient(top, #2b65b6 15%, #032347 50%);
    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#2b65b6, endColorstr=#032347);
    -webkit-box-shadow: rgba(0,0,0,1) 0px 0px 3px inset;
    -moz-box-shadow: rgba(0,0,0,1) 0px 0px 3px inset;
}

.GUIContentSwitcher.GUIModeSwitcher li.positionFirst a {
    padding-left: 1.8em;
}

.GUIModeSwitcher-overflow {
    position: relative;
    overflow: hidden;
    height: 27px;
}

